<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_design"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="6dp"
    tools:context=".activites.LogInActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_logIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:text="@string/tv_logIn"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@android:color/white"
                tools:targetApi="O" />

            <TextView
                android:id="@+id/tv_log_in_failed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tv_logIn_error"
                android:layout_gravity="start"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:paddingLeft="3dp"
                android:paddingStart="3dp"
                android:textColor="#FF0000"
                android:fontFamily="sans-serif"
                android:textSize="13sp"
                android:visibility="invisible"/>

            <EditText
                android:id="@+id/email_log_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:autofillHints="@string/edt_email_hint"
                android:background="@drawable/custom_design"
                android:hint="@string/edt_email_hint"
                android:inputType="textEmailAddress"
                android:padding="14dp"
                android:textAppearance="?android:textAppearanceMedium"
                tools:targetApi="O" />

            <EditText
                android:id="@+id/password_log_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:autofillHints="@string/edt_password_hint"
                android:background="@drawable/custom_design"
                android:hint="@string/edt_password_hint"
                android:inputType="numberPassword"
                android:padding="14dp"
                android:textAppearance="?android:textAppearanceMedium"
                tools:targetApi="O" />

            <Button
                android:id="@+id/btn_log_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:background="@drawable/custom_design"
                android:padding="10dp"
                android:text="@string/btn_log_in"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tv_sign_up_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/tv_sign_up_link"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>